--- a/build.gradle
+++ b/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-rest")
     compile('mysql:mysql-connector-java:6.0.6')
     compileOnly('org.projectlombok:lombok')
-//	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
